CHANGES IN VERSION 1.2.20
-------------------------
SIGNIFICANT USER-LEVEL IMPROVEMENT
    o APOBEC enrichment - trinucleotideMatrix function now calculates APOBEC enrichment in parallel. See details for more.
    o Survival improvements - mafSurvival can perform survival analysis based on sample grouping

NON SIGNIFICANT CHANGES
    o Bug fixes and improvements.

CHANGES IN VERSION 1.2.0
-------------------------
NEW FUNCTIONS
    o mafSurvival - Performs survival analysis.
    o tcgaCompare - Compares mutation load from given MAF against all 33 TCGA cohorts.
    o pancanComparision - Perform PacCancer analysis/comparision
    o prepareMutSig - Prepares MAF file for MutSig analysis by fixing descrepencies in gene symbols.

SIGNIFICANT USER-LEVEL IMPROVEMENT
    o plotmafSummary has argument titvRaw. You can set it to FALSE to plot TiTV fraction instead of raw counts.

NON SIGNIFICANT CHANGES
    o Bug fixes and improvements.

CHANGES IN VERSION 1.0.55
-------------------------
    o LollipopPlot axis improvements

CHANGES IN VERSION 1.0.50
-------------------------
SIGNIFICANT USER-LEVEL IMPROVEMENT
    o Improvements to lollipop plot. Now domain size remains constant irrespectie of mutation load. Bubble size is defunct, instead everything will be of same size similar to cBioPortals mutationMapper. Added an argument to label domain within the plot, added fn argument to save plot.
    o Default values for removeNonMutated argument in  `coOncoplot`, `oncoplot` and `oncostrip` is now set to TRUE.
    o Added plotType argument to plotTiTv.

CHANGES IN VERSION 1.0.40
-------------------------
SIGNIFICANT USER-LEVEL IMPROVEMENT
    o Updated validated signatures database. Earlier database contained 21 signatures. Updated table has 30 signatures as on http://cancer.sanger.ac.uk/cosmic/signatures.
    o Updated protein domain database. Now includes ~1000 more protein structures/domains for both HGNC sybols and their synonyms.