@@ -2,10 +2,10 @@
 % Please edit documentation in R/TrinucleotideMatrix.R
 \name{trinucleotideMatrix}
 \alias{trinucleotideMatrix}
-\title{Extract single 5' and 3' bases flanking the mutated site and estimate APOBEC enrichment score.}
+\title{Extract single 5' and 3' bases flanking the mutated site for de-novo signature analysis. Also estimates APOBEC enrichment scores.}
 \usage{
 trinucleotideMatrix(maf, ref_genome, prefix = NULL, add = TRUE,
-  ignoreChr = NULL, useSyn = TRUE)
+  ignoreChr = NULL, useSyn = TRUE, fn = NULL)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
@@ -19,12 +19,14 @@ trinucleotideMatrix(maf, ref_genome, prefix = NULL, add = TRUE,
 \item{ignoreChr}{Chromsomes to remove from analysis. e.g. chrM}
 
 \item{useSyn}{Logical. Whether to include synonymous variants in analysis. Defaults to TRUE}
+
+\item{fn}{If provided writes APOBEC results to an output file with basename fn. Default NULL.}
 }
 \value{
 list of 2. A matrix of dimension nx96, where n is the number of samples in the MAF and a table describing APOBEC enrichment per sample.
 }
 \description{
-Extract single 5' and 3' bases flanking the mutated site and estimate APOBEC enrichment score.
+Extract single 5' and 3' bases flanking the mutated site for de-novo signature analysis. Also estimates APOBEC enrichment scores.
 }
 \details{
 Extracts immediate 5' and 3' bases flanking the mutated site and classifies them into 96 substitution classes.
